[package]
name = "sel4_vspace"
version = "0.1.0"
edition = "2021"

[dependencies]
bitflags = "2.0.2"
sel4_cspace = { path = "../sel4_cspace" }
sel4_common = { path = "../sel4_common" }
riscv = { git = "https://gitee.com/rcore-os/riscv", features = ["inline-asm"] }

[target.'cfg(target_arch = "aarch64")'.dependencies]
aarch64-cpu = "9.3"

[features]
ENABLE_SMP = []
