[package]
name = "sel4_vspace"
version = "0.1.0"
edition = "2021"

[dependencies]
bitflags = "2.0.2"
sel4_cspace = { git = "https://github.com/rel4team/sel4_cspace.git", branch = "feature/test-check" }
sel4_common = { git = "https://github.com/rel4team/sel4_common.git", branch = "feature/test-check" }

log = "0.4"

[target.'cfg(target_arch = "aarch64")'.dependencies]
aarch64-cpu = "9.3"

[target.'cfg(target_arch = "riscv64")'.dependencies]
riscv = { git = "https://github.com/rcore-os/riscv", features = ["inline-asm"] }

[features]
ENABLE_SMP = []
